# sharklocal

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: COMPATIBILITY.md
docs/compatibility/: template.md
sharklocal/: __init__.py  client.py  exceptions.py  models.py  mqtt_client.py  protobuf.py  rest_client.py
sharklocal/mappings/: __init__.py  base.py
sharklocal/mappings/mqtt/: sharkiq_v1.yaml
sharklocal/mappings/rest/: sharkiq_v1.yaml
tests/: conftest.py  test_client.py  test_exceptions.py  test_mappings_base.py  test_mappings_loader.py  test_models.py  test_mqtt_client.py  test_protobuf.py  test_rest_client.py
