[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sharklocal"
version = "0.1.0"
description = "Local control library for Shark robot vacuums, for use with Home Assistant"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.8",
    "aiomqtt>=2.0",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
source = ["sharklocal"]
branch = true

[tool.coverage.report]
fail_under = 95
show_missing = true

[tool.setuptools.packages.find]
where = ["."]
include = ["sharklocal*"]

[tool.setuptools.package-data]
sharklocal = ["mappings/rest/*.yaml", "mappings/mqtt/*.yaml"]
